[package]
name = "ircd"
version = "0.1.0"
edition = "2021"
authors = ["Celeo <mattboulanger@fastmail.com>"]
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/ircd"
repository = "https://github.com/celeo/ircd"
documentation = ""
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = []
categories = []

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
thiserror = "1.0.67"
tokio = { version = "1.41.0", features = ["full"] }
